make callback field compatible with yaml config

--- a/tests/Application/config/sylius/grids.yaml
+++ b/tests/Application/config/sylius/grids.yaml
@@ -33,7 +33,9 @@ sylius_grid:
                 title: asc
             fields:
                 title:
-                    type: string
+                    type: callback
+                    options:
+                        callback: "callback:strtoupper"
                     label: Title
                     sortable: ~
                 author:
@@ -60,10 +62,11 @@ sylius_grid:
                 name: asc
             fields:
                 id:
-                    type: string
+                    type: callback
+                    options:
+                        callback: "callback:App\\Helper\\GridHelper::addHashPrefix"
                     label: ID
                     sortable: ~
-                    enabled: false
                 name:
                     type: string
                     label: Name
