--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,6 @@
 includes:
+    - phpstan-baseline.neon
+
     - vendor/phpstan/phpstan-webmozart-assert/extension.neon
     - vendor/phpstan/phpstan-phpunit/extension.neon
 
